--- a/todo-vrcafe-astro/public/styles/layout.css
+++ b/todo-vrcafe-astro/public/styles/layout.css
@@ -48,7 +48,7 @@
 }
 
 
-@media (max-width: 600px){
+@media (max-width: 1000px){
   .categories{
     display: grid;
     grid-template-columns: 1fr;
